syntax = "proto3";
package proto;

option go_package = "./proto";
// DO NOT REMOVE THE COMMENTS
// BEGIN GENERATED
// ShamanTalents message.
message ShamanTalents {
    // Elemental
    int32 acuity = 1;
    int32 convection = 2;
    int32 concussion = 3;
    int32 call_of_flame = 4;
    int32 elemental_warding = 5;
    int32 reverberation = 6;
    int32 elemental_precision = 7;
    int32 rolling_thunder = 8;
    bool elemental_focus = 9;
    int32 elemental_reach = 10;
    int32 elemental_oath = 11;
    int32 lava_flows = 12;
    bool fulmination = 13;
    bool elemental_mastery = 14;
    int32 earths_grasp = 15;
    bool totemic_wrath = 16;
    int32 feedback = 17;
    int32 lava_surge = 18;
    bool earthquake = 19;
    // Enhancement
    int32 elemental_weapons = 20;
    int32 focused_strikes = 21;
    int32 improved_shields = 22;
    int32 elemental_devastation = 23;
    int32 flurry = 24;
    int32 ancestral_swiftness = 25;
    int32 totemic_reach = 26;
    int32 toughness = 27;
    bool stormstrike = 28;
    int32 static_shock = 29;
    int32 frozen_power = 30;
    int32 seasoned_winds = 31;
    int32 searing_flames = 32;
    int32 earthen_power = 33;
    bool shamanistic_rage = 34;
    int32 unleashed_rage = 35;
    int32 maelstrom_weapon = 36;
    int32 improved_lava_lash = 37;
    bool feral_spirit = 38;
    // Restoration
    int32 ancestral_resolve = 39;
    int32 tidal_focus = 40;
    int32 spark_of_life = 41;
    int32 resurgence = 42;
    int32 totemic_focus = 43;
    int32 focused_insight = 44;
    int32 natures_guardian = 45;
    int32 ancestral_healing = 46;
    bool natures_swiftness = 47;
    int32 natures_blessing = 48;
    int32 soothing_rains = 49;
    bool improved_cleanse_spirit = 50;
    int32 cleansing_waters = 51;
    int32 ancestral_awakening = 52;
    bool mana_tide_totem = 53;
    int32 telluric_currents = 54;
    bool spirit_link_totem = 55;
    int32 tidal_waves = 56;
    int32 blessing_of_the_eternals = 57;
    bool riptide = 58;
}

enum ShamanPrimeGlyph {
    ShamanPrimeGlyphNone = 0;
    GlyphOfLavaBurst = 41524;
    GlyphOfShocking = 41526;
    GlyphOfEarthlivingWeapon = 41527;
    GlyphOfFireElementalTotem = 41529;
    GlyphOfFlameShock = 41531;
    GlyphOfFlametongueWeapon = 41532;
    GlyphOfLightningBolt = 41536;
    GlyphOfStormstrike = 41539;
    GlyphOfLavaLash = 41540;
    GlyphOfWaterShield = 41541;
    GlyphOfWindfuryWeapon = 41542;
    GlyphOfFeralSpirit = 45771;
    GlyphOfRiptide = 45772;
    GlyphOfEarthShield = 45775;
    GlyphOfUnleashedLightning = 71155;
}

enum ShamanMajorGlyph {
    ShamanMajorGlyphNone = 0;
    GlyphOfChainHeal = 41517;
    GlyphOfChainLightning = 41518;
    GlyphOfFireNova = 41530;
    GlyphOfHealingStreamTotem = 41533;
    GlyphOfHealingWave = 41534;
    GlyphOfTotemicRecall = 41535;
    GlyphOfLightningShield = 41537;
    GlyphOfGroundingTotem = 41538;
    GlyphOfFrostShock = 41547;
    GlyphOfElementalMastery = 41552;
    GlyphOfGhostWolf = 43725;
    GlyphOfThunder = 45770;
    GlyphOfShamanisticRage = 45776;
    GlyphOfHex = 45777;
    GlyphOfStoneclawTotem = 45778;
}

enum ShamanMinorGlyph {
    ShamanMinorGlyphNone = 0;
    GlyphOfWaterBreathing = 43344;
    GlyphOfAstralRecall = 43381;
    GlyphOfRenewedLife = 43385;
    GlyphOfTheArcticWolf = 43386;
    GlyphOfWaterWalking = 43388;
    GlyphOfThunderstorm = 44923;
}

// END GENERATED

enum EarthTotem {
	NoEarthTotem = 0;
	StrengthOfEarthTotem = 1;
	TremorTotem = 2;
	StoneskinTotem = 3;
	EarthElementalTotem = 4;
}

enum AirTotem {
	NoAirTotem = 0;
	WindfuryTotem = 2;
	WrathOfAirTotem = 3;
}

enum FireTotem {
	NoFireTotem = 0;
	MagmaTotem = 1;
	SearingTotem = 2;
	FlametongueTotem = 3;
	FireElementalTotem = 4;
}

enum WaterTotem {
	NoWaterTotem = 0;
	ManaSpringTotem = 1;
	HealingStreamTotem = 2;
	TotemOfTranquilMind = 3;
	ElementalResistanceTotem = 4;
}

enum CallTotem {
	NoCall = 0;
	Elements = 1;
	Ancestors = 2;
	Spirits = 3;
}

message TotemSet {
	EarthTotem earth = 1;
	AirTotem air = 2;
	FireTotem fire = 3;
	WaterTotem water = 4;
}

message ShamanTotems {
	// Not used here, but used by APL
	enum TotemType {
		TypeUnknown = 0;
		Earth = 1;
		Air = 2;
		Fire = 3;
		Water = 4;
	}

	TotemSet elements = 5;
	TotemSet ancestors = 6;
	TotemSet spirits = 7;

	EarthTotem earth = 8;
	AirTotem air = 9;
	FireTotem fire = 10;
	WaterTotem water = 11;

	bool use_fire_elemental = 12 [deprecated=true];

	// Bonus spell power for fire elemental snapshotting.
	int32 bonus_spellpower = 13 [deprecated=true]; // No longer used in favor of Item Swapping
	// Bonus intellect for fire elemental snapshotting.
	int32 bonus_intellect = 15 [deprecated=true]; // No longer used in favor of Item Swapping

	// Snapshot fire elemental using Tier 10 4 set bonus.
	bool enh_tier_ten_bonus = 14 [deprecated=true]; // No longer used in favor of Item Swapping
}

enum ShamanShield {
	NoShield = 0;
	WaterShield = 1;
	LightningShield = 2;
}

enum ShamanImbue {
    NoImbue = 0;
    WindfuryWeapon = 1;
    FlametongueWeapon = 2;
    FrostbrandWeapon = 3;
	EarthlivingWeapon = 4;
}

enum ShamanSyncType {
  NoSync = 0;
  SyncMainhandOffhandSwings = 1;
  DelayOffhandSwings = 2;
	Auto = 3;
}

message ShamanOptions {
	ShamanShield shield = 1;
	ShamanTotems totems = 2;
	CallTotem call = 3;
	ShamanImbue imbue_mh = 4;

	bool use_dragon_soul_2PT12 = 5 [deprecated=true]; // No longer used because Phase 4 is live

	// There's currently no way to swap two different set bonuses during prepull
	bool use_prepull_enh_2PT10 = 6;
}

message ElementalShaman {
	message Rotation {
	}

	message Options {
		ShamanOptions class_options = 1;

		enum ThunderstormRange {
			UnsetTSRange = 0;
			TSInRange = 1;
			TSOutofRange = 2;
		}
		ThunderstormRange thunderstormRange = 2;
	}
	Options options = 3;
}

message EnhancementShaman {
	message Rotation {
	}

	message Options {
		ShamanOptions class_options = 1;
		ShamanSyncType sync_type = 2;
		ShamanImbue imbue_oh = 3;
	}

	Options options = 3;
}

enum ShamanHealSpell {
	AutoHeal = 0;
	HealingWave = 1;
	HealingSurge = 2;
	ChainHeal = 3;
}

message RestorationShaman {
	message Rotation {
	}

	message Options {
		ShamanOptions class_options = 1;
		int32 earth_shield_p_p_m = 2;
	}

	Options options = 3;
}
